@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2009--2012 Red Hat, Inc.
+ * Copyright (c) 2009--2014 Red Hat, Inc.
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -251,7 +251,7 @@ public class SchemaParser {
                 optional = Boolean.TRUE;
             }
             else {
-                optional = new Boolean(value);
+                optional = Boolean.valueOf(value);
             }
         }
         return optional;
